# fuzzy-set

./: fuzzy-set.cabal
Data/: Tconorm.hs  Tnorm.hs
Data/Fuzzy/: Mu.hs  Number.hs  Plot.hs
Test/: Laws.hs  PropBox.hs  Properties.hs
