name:                fuzzy-set
version:             0.1.0.0
synopsis:            Fuzzy sets
-- description:
license:             MIT
license-file:        LICENSE
author:              Sam T.
maintainer:          sta.cs.vsu@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >= 1.9.2

source-repository head
  type:                git
  location:            https://github.com/fmap/fuzzy-set.git

library
  exposed-modules:     Data.Tnorm
                       Data.Tconorm
                       Data.Fuzzy.Mu
  other-modules:         
  build-depends:       base == 4.5.*
  ghc-options:         -O3 -Wall 

test-suite properties
  type:                exitcode-stdio-1.0
  main-is:             Test/Properties.hs
  build-depends:       base  == 4.5.*
                     , QuickCheck >= 2.4
                     , test-framework
                     , test-framework-quickcheck2
                     , random
